# full-stack-fastapi-postgresql

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .env  README.md  docker-compose.override.yml  docker-compose.yml
{{cookiecutter.project_slug}}/backend/app/: pyproject.toml
{{cookiecutter.project_slug}}/backend/app/app/db/: base_class.py
{{cookiecutter.project_slug}}/nginx/: nginx.conf
{{cookiecutter.project_slug}}/scripts/: deploy.sh  test.sh
